# soseki-style-text-generator

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/processed/: frequent_words.json
models/: vocab.pkl
scripts/: download.py  extract_frequent_words.py
src/: generate.py  layers.py  model.py  tokenizer.py  train.py
